--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-  <section class="header6 cid-rjXW2qw6fD mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=36YgDDJ7XSc" id="header6-0">
+  <section class="header6 cid-rjXW2qw6fD mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=PlFNkyCQmp0" id="header6-0">
 
     
 
@@ -32,16 +32,12 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">
-                    INTRO WITH BACKGROUND VIDEO
-                </h1>
-                <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
-                    Intro with background video and color overlay. Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface.
-                </p>
-                <div class="mbr-section-btn align-center">
-                        <a class="btn btn-md btn-primary display-4" href="https://mobirise.co">LEARN MORE</a>
-                        <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">LIVE DEMO</a>
-                </div>
+                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">Careers Summit 2019</h1>
+                <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">Ireland's top one-day careers event for recruiters and young professionals.
+<br>Dalymount Park, Dublin.
+<br>7 September 2019.</p>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="https://mobirise.co">LEARN MORE</a>
+                        <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">BUY TICKETS</a></div>
             </div>
         </div>
     </div>
@@ -53,7 +49,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content4 cid-rjXW8uiX1l" id="content4-1">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="mbr-section content4 cid-rjXW8uiX1l" id="content4-1">
 
     
 
