create github pages

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content4 cid-rjXW8uiX1l" id="content4-1">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section content4 cid-rjXW8uiX1l" id="content4-1">
 
     
 
@@ -172,12 +172,8 @@
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center pb-3 mbr-fonts-style display-2">
-                    Article Title with Solid Background
-                </h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">
-                    Shape your future web project with sharp design and refine coded functions.
-                </h3>
+                <h2 class="align-center pb-3 mbr-fonts-style display-2">Book your Place Now!</h2>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Exhibition spaces are limited and selling out fast</h3>
                 
             </div>
         </div>
@@ -195,12 +191,8 @@
                 <div class="pricing">
                     <div class="plan-header">
                         <div class="plan-price">
-                            <span class="price-value mbr-fonts-style display-5">
-                                $
-                            </span>
-                            <span class="price-figure mbr-fonts-style display-1">
-                                35
-                            </span>
+                            <span class="price-value mbr-fonts-style display-5">€</span>
+                            <span class="price-figure mbr-fonts-style display-1">150</span>
                             <h3 class="plan-title mbr-fonts-style display-5">
                                 Standard
                             </h3>
@@ -208,9 +200,7 @@
                         </div>
                     </div>
                     <div class="plan-body">
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            Mobirise is perfect for non-techies who are not familiar with web development.
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7">Exhibition booth only. All booths include power and free WiFi access.</p>
                         <div class="mbr-section-btn pt-4 text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">BUY NOW</a>
                         </div>
@@ -222,12 +212,8 @@
                 <div class="pricing">
                     <div class="plan-header">
                         <div class="plan-price">
-                            <span class="price-value mbr-fonts-style display-5">
-                                $
-                            </span>
-                            <span class="price-figure mbr-fonts-style display-1">
-                                65
-                            </span>
+                            <span class="price-value mbr-fonts-style display-5">€</span>
+                            <span class="price-figure mbr-fonts-style display-1">200</span>
                             <h3 class="plan-title mbr-fonts-style display-5">
                                 Business
                             </h3>
@@ -235,9 +221,7 @@
                         </div>
                     </div>
                     <div class="plan-body">
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            Mobirise is perfect for non-techies who are not familiar with web development.
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7">Exhibition booth plus listing in all promotional campaigns.</p>
                         <div class="mbr-section-btn pt-4 text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">BUY NOW</a>
                         </div>
@@ -249,12 +233,9 @@
                 <div class="pricing">
                     <div class="plan-header">
                         <div class="plan-price">
-                            <span class="price-value mbr-fonts-style display-5">
-                                $
-                            </span>
+                            <span class="price-value mbr-fonts-style display-5">€</span>
                             <span class="price-figure mbr-fonts-style display-1">
-                                90
-                            </span>
+                                350</span>
                             <h3 class="plan-title mbr-fonts-style display-5">
                                 Premium
                             </h3>
@@ -262,9 +243,7 @@
                         </div>
                     </div>
                     <div class="plan-body ">
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            Mobirise is perfect for non-techies who are not familiar with web development.
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7">Exhibition booth, promotional listing and opportunity to present workshops.</p>
                         <div class="mbr-section-btn pt-4 text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">BUY NOW</a>
                         </div>
